fix footer on mobile

--- a/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/millerntor.less
+++ b/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/millerntor.less
@@ -756,6 +756,15 @@ ul.work-artists {
 		}
 	}
 	
+	.foot_logos {
+    	margin: 0 auto;
+    	width: 100px;
+	}
+	.footer_logo {
+    	float: none;
+    	margin: 0px 0 10px 0px;
+	}
+	
 }
 
 
